# archversion

./: .gitignore  Makefile.am  README.rst  bootstrap  configure.ac  setup.py
misc/: Makefile.am  PKGBUILD  PKGBUILD-git  PKGBUILD.in  archversion.conf  archversion.service  archversion.timer  example.conf  example2.conf  packages.conf.example  packages.conf.example2  sendmail.conf.example
src/lib/archversion/: Makefile.am  __init__.py  __init__.py.in  config.py  controller.py  database.py  error.py  pacman.py  version.py
